# pybacktestchain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dev.py  pyproject.toml  requirements.txt  setup.txt
backtests/: BrownDolphinChef.csv  CrimsonFalconLawyer.csv  GreenDolphinMechanic.csv  IndigoTigerPlumber.csv  OrangeOwlAstronaut.csv  PurpleLionPhotographer.csv  RedJaguarTailor.csv  TurquoiseCheetahCarpenter.csv  TurquoiseElephantFirefighter.csv  TurquoiseElephantTailor.csv  VioletEagleCarpenter.csv
blockchain/: backtest.pkl
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pybacktestchain/: __init__.py  blockchain.py  broker.py  data_module.py
tests/: test_blockchain.py  test_pybacktestchain.py
