[tool.poetry]
name = "pybacktestchain"
version = "0.1.0"
description = "Store your backtests in a Blockchain"
authors = ["Juan F. Imbet"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
numpy = "^2.0.1"
yfinance = "^0.2.41"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
python-semantic-release = "^9.8.7"


[tool.poetry.group.jupyter.dependencies]
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.semantic_release] 
version_variable = "pyproject.toml:version" 
version_toml = [ 
"pyproject.toml:tool.poetry.version", 
] 
